--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Webpack plugin for versioning bundles and chunks with the hash of the last Git commit",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --full-trace --check-leaks"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,10 @@
   "bugs": {
     "url": "https://github.com/alleyinteractive/webpack-git-hash/issues"
   },
-  "homepage": "https://github.com/alleyinteractive/webpack-git-hash#readme"
+  "homepage": "https://github.com/alleyinteractive/webpack-git-hash#readme",
+  "devDependencies": {
+    "mocha": "3.0.2",
+    "chai": "3.5.0",
+    "rimraf": "2.5.4"
+  }
 }
