--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/alleyinteractive/webpack-git-hash#readme",
   "devDependencies": {
-    "mocha": "3.0.2",
     "chai": "3.5.0",
-    "rimraf": "2.5.4"
+    "fs-extra": "^0.30.0",
+    "mocha": "3.0.2"
   }
 }
